# HeartMuLa_ComfyUI

./: .gitignore  README.md  README_FP4.md  __init__.py  benchmark_heartmula.py  pyproject.toml  requirements.txt
example workflows/: Generate Music.json
example_workflows/: Generate Music.json  Lyrics Transcriber.json
util/heartlib/heartcodec/: modeling_heartcodec.py
util/heartlib/heartmula/: modeling_heartmula.py
util/heartlib/pipelines/: music_generation.py
