[project]
name = "heartmula_comfyui"
description = ""
version = "1.5.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["torchtune", "vector_quantize_pytorch", "transformers>=4.45.0", "torchtune>=0.3.0", "einops>=0.8.0", "safetensors>=0.4.0", "sentencepiece>=0.2.0", "accelerate>=1.0.0", "numpy", "protobuf", "omegaconf"]

[project.urls]
Repository = "https://github.com/benjiyaya/HeartMuLa_ComfyUI"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/benjiyaya/HeartMuLa_ComfyUI/wiki"
"Bug Tracker" = "https://github.com/benjiyaya/HeartMuLa_ComfyUI/issues"

[tool.comfy]
PublisherId = "benjiyaya"
DisplayName = "HeartMuLa_ComfyUI"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

